--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy1h-bOJiTYx-gPL9IixE94MopMTkZAkVl1FIhSlxms9N7lWGyh7oqcGjyegSaitEFSx8&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReadApp for React</title>
 
